--- a/ImagesAsNumericalData.ipynb
+++ b/ImagesAsNumericalData.ipynb
@@ -50,7 +50,7 @@
    ],
    "source": [
     "# Read in the image\n",
-    "image = mpimg.imread('//Users/fadhlihajar/Documents/Art/IMG_5500.jpg')\n",
+    "image = mpimg.imread('.../Art/IMG_5500.jpg')\n",
     "\n",
     "# Print out the image dimensions \n",
     "print('Image dimensions:', image.shape)"
