--- a/BlueScreen.ipynb
+++ b/BlueScreen.ipynb
@@ -49,7 +49,7 @@
    ],
    "source": [
     "# Read in the image\n",
-    "image = cv2.imread('/Users/fadhlihajar/Desktop/BlueScreen .png')\n",
+    "image = cv2.imread('.../Desktop/BlueScreen .png')\n",
     "\n",
     "# Print out the type of image data and its dimensions (height, width, and color)\n",
     "print('This image is:', type(image), \n",
@@ -234,7 +234,7 @@
    ],
    "source": [
     "#Load in a background image, and convert it to RGB \n",
-    "background_image = cv2.imread('/Users/fadhlihajar/Desktop/background.jpg')\n",
+    "background_image = cv2.imread('.../Desktop/background.jpg')\n",
     "background_image = cv2.cvtColor(background_image, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "# Crop it to the right size (648x800)\n",
